--- a/ui/sections/wizard/inspectors/share.reel/table-smb.reel/table-row.reel/table-row.html
+++ b/ui/sections/wizard/inspectors/share.reel/table-smb.reel/table-row.reel/table-row.html
@@ -35,7 +35,7 @@
                 "element": {"#": "allowGuest"}
             },
             "bindings": {
-                "checked": {"<->": "!!@owner.object.properties.hosts_allow"}
+                "checked": {"<->": "@owner.object.properties.guest_ok"}
             }
         },
 
