--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -45,6 +45,12 @@
                 "element": {"#": "accounts"}
             }
         },
+        "task": {
+            "prototype": "ui/sections/task/inspectors/tasks.reel",
+            "properties": {
+                "element": {"#": "task"}
+            }
+        },
         "hardware": {
             "prototype": "../hardware/hardware.reel",
             "properties": {
@@ -153,6 +159,7 @@
                         <div data-arg="settings" data-montage-id="settings"></div>
                         <div data-arg="services" data-montage-id="services"></div>
                         <div data-arg="console" data-montage-id="console"></div>
+                        <div data-arg="task" data-montage-id="task"></div>
                         <div data-arg="peering" data-montage-id="peering"></div>
                         <div data-arg="calendar" data-montage-id="calendar"></div>
                         <div data-arg="virtualization" data-montage-id="virtualization"></div>
