--- a/ui/controls/inspector-footer.reel/inspector-footer.html
+++ b/ui/controls/inspector-footer.reel/inspector-footer.html
@@ -10,7 +10,7 @@
                 "element": {"#": "owner"}
             },
             "bindings": {
-                "classList.has('is-visible')": {"<-": "!@owner.isHidden"}
+                "classList.has('is-hidden')": {"<-": "@owner.isHidden"}
             }
         },
         "delete": {
