Remove a binding to the property datasources of the chart live component.

--- a/ui/widgets/arc-demand-data.reel/arc-demand-data.html
+++ b/ui/widgets/arc-demand-data.reel/arc-demand-data.html
@@ -25,7 +25,7 @@
                 "isTimeSeries": true,
                 "isStacked": false,
                 "useGuideline": true,
-                "source": "zfs_arc",
+                "datasources": ["zfs_arc"],
                 "metrics": [
                     "cache_result-demand_data-hit",
                     "cache_result-demand_data-miss",
