--- a/ui/widgets/cpu-temperature.reel/cpu-temperature.html
+++ b/ui/widgets/cpu-temperature.reel/cpu-temperature.html
@@ -38,7 +38,7 @@
                 "delegate": {"@": "owner"}
             },
             "bindings": {
-                "sources": {"<-": "@owner._cpus"}
+                "datasources": {"<-": "@owner._cpus"}
             }
         }
     }
