--- a/ui/widgets/cpu-usage.reel/cpu-usage.html
+++ b/ui/widgets/cpu-usage.reel/cpu-usage.html
@@ -25,7 +25,7 @@
                 "graphType": "stacked",
                 "yFormat": "%",
                 "useGuideline": true,
-                "source": "aggregation-cpu-sum",
+                "datasources": ["aggregation-cpu-sum"],
                 "metrics": [
                     "cpu-user",
                     "cpu-system"
