--- a/ui/widgets/disk-temperature.reel/disk-temperature.html
+++ b/ui/widgets/disk-temperature.reel/disk-temperature.html
@@ -39,7 +39,7 @@
                 "removeSourcePrefix": "disktemp-"
             },
             "bindings": {
-                "sources": {"<-": "@owner.disks.map{'disktemp-' + name}"}
+                "datasources": {"<-": "@owner.disks.map{'disktemp-' + name}"}
             }
         }
     }
