--- a/ui/widgets/memory-allocation.reel/memory-allocation.html
+++ b/ui/widgets/memory-allocation.reel/memory-allocation.html
@@ -26,7 +26,7 @@
                 "isTimeSeries": true,
                 "graphType": "stacked",
                 "useGuideline": true,
-                "source": "memory",
+                "datasources": ["memory"],
                 "metrics": [
                     "memory-active",
                     "memory-inactive",
