--- a/ui/widgets/network-traffic.reel/network-traffic.html
+++ b/ui/widgets/network-traffic.reel/network-traffic.html
@@ -47,7 +47,7 @@
                 "delegate": {"@": "owner"}
             },
             "bindings": {
-                "source": {"<-": "'interface-' + @owner.card"}
+                "datasources": {"<-": "['interface-' + @owner.card]"}
             }
         },
         "selectOptionsConverter": {
