--- a/ui/widgets/load-average.reel/load-average.html
+++ b/ui/widgets/load-average.reel/load-average.html
@@ -26,7 +26,7 @@
                 "isTimeSeries": true,
                 "isStacked": false,
                 "useGuideline": true,
-                "source": "load",
+                "datasources": ["load"],
                 "metrics": [
                     ["load", "longterm"],
                     ["load", "midterm"],
