Changes “Size” to “Capacity”

--- a/ui/sections/storage/inspectors/volume.reel/volume.html
+++ b/ui/sections/storage/inspectors/volume.reel/volume.html
@@ -147,7 +147,7 @@
             <div data-montage-id="volumeIcon" class="Volume-header-icon"></div>
             <div class="Volume-header-info">
                 <div data-montage-id="size" class="Volume-header-diskSize"></div>
-                <small class="flush-bottom">Size</small>
+                <small class="flush-bottom">Capacity</small>
             </div>
         </div>
         <div data-montage-id="allocationBar" class="Volume-allocationBar"></div>
