UPDATED: replaced date with created_at

--- a/ui/sections/task/controls/table-task.reel/table-task.html
+++ b/ui/sections/task/controls/table-task.reel/table-task.html
@@ -34,8 +34,8 @@
                         "path": "progress.percentage"
                     },
                     {
-                        "value": "Date",
-                        "path": "started_at['$date']"
+                        "value": "Created at",
+                        "path": "created_at['$date']"
                     }
                 ]
             },
