ADDED: clear search fields button

--- a/ui/sections/task/inspectors/tasks.reel/tasks.html
+++ b/ui/sections/task/inspectors/tasks.reel/tasks.html
@@ -84,6 +84,13 @@
                 "value": "Apply Search"
             }
         },
+        "clear": {
+            "prototype": "blue-shark/ui/button.reel",
+            "properties": {
+                "element": {"#": "clear"},
+                "value": "Clear Search"
+            }
+        },
         "table": {
             "prototype": "ui/sections/task/controls/table-task.reel",
             "properties": {
@@ -104,6 +111,7 @@
             <div data-montage-id="state"></div>
             <div data-montage-id="started_at"></div>
             <div data-montage-id="apply"></div>
+            <div data-montage-id="clear"></div>
             <div data-montage-id="table"></div>
         </div>
     </div>
