adds flex helpers and col-1 helper class, edits change from helper class

--- a/ui/accounts/accounts-list-options.reel/accounts-list-options.html
+++ b/ui/accounts/accounts-list-options.reel/accounts-list-options.html
@@ -24,7 +24,7 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="UserListOptions flex-row flex-spaceBetween flex-alignItems--center">
+    <div data-montage-id="owner" class="UserListOptions flex-row flex-spaceBetween flex-align--center">
         <span>Show domains</span>
         <div data-montage-id="checkbox" class="Checkbox--light"></div>
     </div>
