--- a/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget.html
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget.html
@@ -170,7 +170,7 @@
                 </div>
                 <div data-montage-id="viewTabs" class="Calendar-viewTabs"></div>
             </div>
-            <div class="flex-row flex-spaceBetween flex-alignItems--center">
+            <div class="flex-row flex-spaceBetween flex-align--center">
                 <div class="flex-row">
                     <span>Drag to create</span>
                     <div data-montage-id="taskCategories" class="CalendarWidget-taskCategories g-margin-left--half">
