--- a/ui/sections/task/controls/table-task.reel/table-task.html
+++ b/ui/sections/task/controls/table-task.reel/table-task.html
@@ -36,6 +36,10 @@
                     {
                         "value": "Created at",
                         "path": "created_at['$date']"
+                    },
+                    {
+                        "value": "Finished at",
+                        "path": "finished_at['$date']"
                     }
                 ]
             },
