Only show the warning icon if the disk is in an exported pool
Ticket: #19429

--- a/ui/icons/disk.reel/disk.html
+++ b/ui/icons/disk.reel/disk.html
@@ -42,7 +42,7 @@
                 "element": {"#": "warningConditional"}
             },
             "bindings": {
-                "condition": {"<-": "@owner.disk._allocation.defined()"}
+                "condition": {"<-": "@owner.disk._allocation.defined() && @owner.disk._allocation.type == 'EXPORTED_VOLUME'"}
             }
         }
     }
