removes commented code

--- a/ui/icons/disk.reel/disk.html
+++ b/ui/icons/disk.reel/disk.html
@@ -50,7 +50,7 @@
     </script>
 </head>
 <body>
-<div data-montage-id="owner" class="DiskIcon">
+<div data-montage-id="owner" class="DiskIcon warn">
     <div data-montage-id="statusStateSubstitution" class="DiskIcon-statusIcon">
         <svg data-arg="warn"><use xlink:href="#i-alert"/></svg>
         <svg data-arg="fail"><use xlink:href="#i-alert-circle"/></svg>
@@ -64,4 +64,3 @@
 </div>
 </body>
 </html>
-<!-- "switchValue": {"<-": "@owner.disk._allocation.defined() ? 'warn' : 'fail'"} -->
