adds margin to tables

--- a/ui/sections/wizard/inspectors/share.reel/share.html
+++ b/ui/sections/wizard/inspectors/share.reel/share.html
@@ -61,10 +61,10 @@
 </head>
 <body>
     <div data-montage-id="owner" class="Share-wizard">
-        <div data-montage-id="afp"></div>
-        <div data-montage-id="iscsi"></div>
-        <div data-montage-id="nfs"></div>
-        <div data-montage-id="smb"></div>
+        <div data-montage-id="afp" class="g-margin-bottom"></div>
+        <div data-montage-id="iscsi" class="g-margin-bottom"></div>
+        <div data-montage-id="nfs" class="g-margin-bottom"></div>
+        <div data-montage-id="smb" class="g-margin-bottom"></div>
     </div>
 </body>
 </html>
