--- a/ui/sections/wizard/inspectors/share.reel/table-afp.reel/table-row.reel/table-row.html
+++ b/ui/sections/wizard/inspectors/share.reel/table-afp.reel/table-row.reel/table-row.html
@@ -55,7 +55,7 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="TableRow">
+    <div data-montage-id="owner" class="TableRow Table-cells">
         <div><div data-montage-id="name"></div></div>
         <div><div data-montage-id="timeMachine"></div></div>
         <div><div data-montage-id="ownerUser"></div></div>
