--- a/ui/sections/wizard/inspectors/user.reel/user.html
+++ b/ui/sections/wizard/inspectors/user.reel/user.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <div data-montage-id="owner" class="System-User">
-        <div data-montage-id="users"></div>
+        <div data-montage-id="users" class="g-margin-bottom"></div>
     </div>
 </body>
 </html>
