improves frb binding

--- a/ui/controls/cascading-list.reel/cascading-list-item.reel/cascading-list-item.html
+++ b/ui/controls/cascading-list.reel/cascading-list-item.reel/cascading-list-item.html
@@ -38,7 +38,7 @@
                 "value": "Help"
             },
             "bindings": {
-                "classList.has('is-visible')": {"<-": "@owner.object.path(@owner.userInterfaceDescriptor.helpMessage)"}
+                "classList.has('is-visible')": {"<-": "@helpMessage.value"}
             }
         },
         "content": {
