Fix prototype path for radial-chart.
While here remove bindings that I do not need.

Ticket: #8246

--- a/ui/dashboard/widgets/chart-live.reel/chart-live.html
+++ b/ui/dashboard/widgets/chart-live.reel/chart-live.html
@@ -33,13 +33,9 @@
             }
         },
         "radialChart": {
-            "prototype": "ui/controls/chart.reel",
+            "prototype": "ui/controls/radial-chart.reel",
             "properties": {
                 "element": {"#": "radialChart"}
-            },
-            "bindings": {
-                "updatePeriod": {"<-": "@owner.updatePeriod || 30000"},
-                "showLegend": {"<-": "@owner.showLegend.defined() ? @owner.showLegend : true"}
             }
         },
         "chartTypeSubstitution": {
