added enable/disable interactions option to chart control

--- a/ui/dashboard/widgets/chart-live.reel/chart-live.html
+++ b/ui/dashboard/widgets/chart-live.reel/chart-live.html
@@ -26,7 +26,8 @@
                 "useGuideline": {"<-": "@owner.useGuideline.defined() ? @owner.useGuideline : true"},
                 "xLabel": {"<-": "@owner.xLabel"},
                 "yLabel": {"<-": "@owner.yLabel"},
-                "xAxisLable": {"<-": "@owner.xAxisLable"}
+                "xAxisLable": {"<-": "@owner.xAxisLable"},
+                "enableInteractions": {"<-": "@owner.enableInteractions.defined() ? @owner.enableInteractions : true"}
             }
         }
     }
