use stacked bar instead of clustered bar plot

--- a/ui/widgets/composite-temperature.reel/composite-temperature.html
+++ b/ui/widgets/composite-temperature.reel/composite-temperature.html
@@ -29,9 +29,10 @@
             "properties": {
                 "element": {"#": "chart"},
                 "yFormat": "3r",
-                "graphType": "clusteredbar",
+                "graphType": "stackedbar",
                 "useGuideline": true,
-                "yLabel": "C"
+                "yLabel": "C",
+                "enableInteractions": false
             }
         }
     }
