hide legend on temperature widgets

--- a/ui/widgets/cpu-temperature.reel/cpu-temperature.html
+++ b/ui/widgets/cpu-temperature.reel/cpu-temperature.html
@@ -28,10 +28,11 @@
             "properties": {
                 "element": {"#": "chart-live"},
                 "yLabel": "C",
-                "yFormat": "1.2s",
+                "yFormat": "3r",
                 "graphType": "stackedBar",
                 "xAxisLable": -90,
                 "isTimeSeries": false,
+                "showLegend": false,
                 "metrics": [
                     "temperature"
                 ],
