moves animation to blue-shark, removes unused css, uses helpers to clean up css

--- a/ui/sign-in.reel/sign-in.html
+++ b/ui/sign-in.reel/sign-in.html
@@ -98,12 +98,8 @@
             <img src="../../assets/images/logo.png" class="SignIn-logo" alt="FreeNas Logo">
             <div data-montage-id="infoText" class="SignIn-infoText"></div>
             <div data-montage-id="errorMessage" class="SignIn-error-message "></div>
-            <div class="field">
-                <input type="text" data-montage-id="userName" class="SignIn-userName"></input>
-            </div>
-            <div class="field">
-                <input type="password" data-montage-id="password" class="SignIn-userName"></input>
-            </div>
+            <input type="text" data-montage-id="userName" class="SignIn-userName g-margin-bottom--half"></input>
+            <input type="password" data-montage-id="password" class="SignIn-userName g-margin-bottom--double"></input>
             <button data-montage-id="submit" class="SignIn-submit Button--primary Button--block Button--large Button--loader">
                 <svg><use xlink:href="#i-freenasIcon"/></svg>
             </button>
