fixes transparency bug

--- a/ui/icons/disk.reel/disk.html
+++ b/ui/icons/disk.reel/disk.html
@@ -70,7 +70,7 @@
     </script>
 </head>
 <body>
-<div data-montage-id="owner" class="DiskIcon warn">
+<div data-montage-id="owner" class="DiskIcon">
     <div data-montage-id="statusStateSubstitution" class="DiskIcon-statusIcon">
         <div data-arg="smart" data-montage-id="warningStateSituation" class="DiskIcon-statusIcon">
             <svg data-arg="warn"><use xlink:href="#i-alert"/></svg>
